# HEAVE_COMPSATION_GUI

./: CMakeLists.txt  README.md  pid.ini
_decrp/: ImuData.h  crc_table.cpp  crc_table.h  imu.cpp  imu.h  ms3008driver.cpp  ms3008driver.h  params.cpp  params.h
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/control_algorithm/: CMakeLists.txt  package.xml
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/control_algorithm/include/: PID.h
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/control_algorithm/src/: PID.cpp  main.cpp
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/imu/: CMakeLists.txt  package.xml
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/imu/include/: ahrs_driver.h  fdilink_data_struct.h
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/imu/launch/: run_vel.launch
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/imu/msg/: vel.msg
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/imu/src/: ahrs_driver.cpp
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/launch/: package.xml
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/launch/launch/: start.launch
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/motor_driver/: CMakeLists.txt  package.xml
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/motor_driver/include/: MotorDriver.h  MotorProtocolRS485.h
_decrp/HEAVE_COMPENSATION(ROS decrap)/src/motor_driver/src/: MotorDriver.cpp  MotorProtocolRS485.cpp  main.cpp
_decrp/serial/: serialutil.cpp  serialutil.h
source/: main.cpp
source/cfg/: inibase.cpp  inibase.h
source/imu/: imudriver.cpp  imudriver.h
source/motor/: motordriver.cpp  motordriver.h  motorprotocol.cpp  motorprotocol.h
source/pid/: pid.cpp  pid.h
source/plot/base/: plotdynamicdraw.cpp  plotdynamicdraw.h  plotelements.cpp  plotelements.h  plotinterication.cpp  plotinterication.h  plotlayout.cpp  plotlayout.h  plotlayout.ui  plotpid.cpp  plotpid.h  plotrealtimecurve.cpp  plotrealtimecurve.h  plotstaticdraw.cpp  plotstaticdraw.h
source/plot/dialog/: setplot.cpp  setplot.ui
source/plot/prop/: plotprop.cpp  plotprop.h
source/res/: res.qrc
source/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  util.cpp  util.h
